kubernetes/main/apps/default/nas/komodo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: komodo
  namespace: default
spec:
  ports:
    - name: https
      port: 9120
      targetPort: 9120
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: komodo
  namespace: default
  labels:
    kubernetes.io/service-name: komodo
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.5
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 9120
    protocol: TCP
