kubernetes/main/apps/default/nas/komodo/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: komodo
  namespace: default
spec:
  hostnames:
    - komodo.garb.dev
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: komodo
          port: 9120
